update url format
